[package]
name = "jsonv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui = "0.23.0"
egui_extras = "0.23.0"
rand = "0.8.5"
rfd = "0.12.1"
serde = "1.0.152"
serde_json = "1.0.93"
